<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical"
    tools:ignore="Autofill">

    <ImageView
        android:id="@+id/logo_octanapp"
        android:layout_width="312dp"
        android:layout_height="157dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo_octanapp_main"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/txt_login_email"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/txt_login_senha"
        android:layout_width="360dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/senha"
        android:layout_gravity="center"
        android:inputType="textPassword" />

    <Switch
        android:id="@+id/sw_login_lembrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lembrar"
        android:layout_gravity="center"
        android:textColor="#F7383838" />

    <Button
        android:id="@+id/bt_entrar"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@color/azul1"
        android:textColor="#ffffff"
        android:text="ENTRAR" />

    <Button
        android:id="@+id/bt_inscrever"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:background="@color/azul2"
        android:textColor="#ffffff"
        android:text="INSCREVER-SE" />

    <Button
        android:id="@+id/bt_redefinir"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@color/azul2"
        android:textColor="#ffffff"
        android:text="REDEFINIR SENHA" />


</LinearLayout>