<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CadastroVeiculoActivity"
    tools:ignore="Autofill">

    <include
        android:id="@+id/toolbar_cadastro_veiculo"
        layout="@layout/toolbar" />

    <Spinner
        android:id="@+id/spinner_marca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="87dp" />

    <Spinner
        android:id="@+id/spinner_modelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="140dp" />

    <EditText
        android:id="@+id/cadastro_veiculo_placa"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="188dp"
        android:ems="10"
        android:hint="@string/cadastro_veiculo_placa"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/cadastro_veiculo_ano"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="243dp"
        android:ems="10"
        android:hint="@string/cadastro_veiculo_ano"
        android:inputType="number" />

    <EditText
        android:id="@+id/cadastro_veiculo_km"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="297dp"
        android:ems="10"
        android:hint="@string/cadastro_veiculo_km"
        android:inputType="number" />

    <Button
        android:id="@+id/bt_confirmar_cadastro_veiculo"
        android:layout_width="319dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:text="CADASTRAR"
        android:background="@color/azul2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_marginTop="363dp"/>


</RelativeLayout>